Consistent OS-independent command line params' quoting and escaping